--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,13 @@ body {
   font-size: 16px;
   line-height: 24px;
   color:#000000;
-  font-weight: regular;
-  font-style: Roboto;
+  font-weight: normal;
+  font-style: normal;
+  font-family: Roboto, Arial, sans-serif;
 }
 .main-header {
 }
-.clearfix ::after{
+.clearfix::after{
   content: "";
   display: table;
   clear: both;
@@ -23,8 +24,10 @@ body {
   margin-right: 140px;
 }
 .main-navigation {
+  display: inline-block;
   float: left;
   width: 560px;
+  margin: 0 auto;
 }
 .user-block {
   float: right;
@@ -36,20 +39,15 @@ body {
 }
 
 
-.features-item1 {
+.features-item {
   float: left;
   width: 300px;
   margin-right: 100px;
 }
-.features-item2 {
-  float: left;
-  width: 300px;
-}
-.features-item3 {
+.features-item:last-child {
   float: right;
   width: 300px;
   margin-right: 60px;
-  margin-left: 100px;
 }
 .about-us {
   width: 1160px;
@@ -66,6 +64,14 @@ body {
 .portfolio {
   width: 1160px;
   margin: 0 auto;
+}
+.portfolio-btn {
+  display: inline-block;
+  width: 260px;
+  margin-right: 40px;
+}
+.portfolio-btn:last-child {
+  margin-right: 0;
 }
 .map{
   width: 1440px;
@@ -86,6 +92,7 @@ body {
   margin: 0 auto;
 }
 .selection {
+  display: block;
   float: left;
   width: 260px;
 }
@@ -97,38 +104,42 @@ body {
   width: 760px;
   margin: auto;
 }
-.sedona {
+.card-product{
+  display: inline-block;
   float: left;
   width: 360px;
-  margin-right: 40px;
+  margin-bottom: 20px;
 }
-.pink {
-  float: left;
+.card-product:nth-child(2n) {
+  float: right;
   width: 360px;
-}
-.barsh {
-  float: left;
-  width: 360px;
-  margin-right: 40px;
-}
-.mishka {
-  float: left;
-  width: 360px;
-}
-.study {
-  float: left;
-  width: 360px;
-  margin-right: 40px;
-}
-.kvas {
-  float: left;
-  width: 360px;
+  margin-left: 40px;
+  margin-bottom: 20px;
 }
 .paginator {
   width: 460px;
   margin-left: 0;
 }
-
+.map {
+  display: block;
+  position: relative;
+  height: 414px;
+  width: 1440px;
+  background-image: url("img/map.jpeg");
+}
+.map-contacts {
+  position: absolute;
+}
+.footer-social {
+  display: inline-block;
+  float: left;
+  width: 260px;
+}
+.friends {
+  display: inline-block;
+  float: right;
+  margin-left: 140px;
+}
 
 h3 {
   font-size: 24px;
@@ -137,11 +148,14 @@ h3 {
   font-weight: bold;
   font-style: Roboto;
 }
-
 h4 {
   font-size: 36px;
   line-height: 36px;
   color:#000000;
   font-weight: bold;
   font-style: Roboto;
+}
+
+div, article, header, footer, section, a, p, span {
+outline: 1px solid red;
 }
