--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
   font-family: Roboto, Arial, sans-serif;
 }
 .main-header {
+  background-color: #eeeeee;
 }
 .clearfix::after{
   content: "";
@@ -21,25 +22,106 @@ body {
 .home {
   float: left;
   width: 160px;
-  margin-right: 140px;
+  margin-right: 200px;
 }
+.home:hover {
+  opacity: 0.8;
+}
+
 .main-navigation {
-  display: inline-block;
+  display: inline;
   float: left;
   width: 560px;
   margin: 0 auto;
 }
+.main-navigation a {
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #000000;
+  margin-right: 50px;
+  margin-top: 20px;
+  vertical-align: middle;
+}
+.main-navigation a last-child {
+  margin-right: 0px;
+}
+.main-navigation a:hover {
+  color: #fb565a;
+}
+.main-navigation .active {
+  border-bottom: 2px solid #fb565a;
+}
+
 .user-block {
   float: right;
   width: 160px;
+  min-height: 24px;
+  margin-top: 20px;
+  position: relative;
 }
+.user-block a {
+  display: inline-block;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #000000;
+  left: 86px;
+  position: absolute;
+}
+.basket-img {
+  width: 15px;
+  height: 15px;
+  background-image: image("198335-nerds/img/nav.png");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  opacity: 0.3;
+  position: absolute;
+  top: 4px;
+  left: 58px;
+}
+.user-block a:hover {
+  color: #fb565a;
+}
+
 .slider {
   width: 1160px;
   margin: 0 auto;
 }
+.slider-img {
+  width: 760px;
+  position:relative;
+  left: 400px;
+}
+.slider-slogan {
+  width: 520px;
+  position: absolute;
+  z-index: 10;
+}
+.slogan-name{
+  font-size: 55px;
+  font-weight: normal;
+  line-height: normal;
+}
 
+.btn {
+  padding: 17px 50px;
+  background-color: #fb565a;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 16px;
+  text-transform: uppercase;
+  /*margin-top: 45px;*/
+}
+.btn:hover {
+  background-color: #e74246;
+  color: #f9d8d8;
+}
 
 .features-item {
+  margin-top: 80px;
+  margin-bottom: 60px;
   float: left;
   width: 300px;
   margin-right: 100px;
@@ -49,13 +131,49 @@ body {
   width: 300px;
   margin-right: 60px;
 }
+.btn-item {
+  padding: 17px 50px;
+  background-color: #fb565a;
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+.btn-item:hover {
+  background-color: #e74246;
+  color: #f9d8d8;
+}
+.btn-item nth-child(2) {
+  background-color: #00ca74;
+}
+.btn-item nth-child(2):hover {
+  background-color: #00bc6c;
+  color: #ffffff;
+}
+.btn-item nth-child(3) {
+  background-color: #efc84a;
+}
+.btn-item nth-child(3):hover {
+  background-color: #eab534;
+  color: #f5deb3;
+}
+hr {
+  color: #eeeeee;
+  height: 2px;
+}
 .about-us {
   width: 1160px;
   margin: 0 auto;
+  margin-top: 80px;
 }
 .about {
   float: left;
   width: 660px;
+}
+h2 {
+  font-size: 45px;
+  line-height: normal;
+  font-weight: normal;
 }
 .about-img {
   float: right;
@@ -64,14 +182,22 @@ body {
 .portfolio {
   width: 1160px;
   margin: 0 auto;
+  font-size: 0;
+}
+.portfolio nth-child(4) {
+  margin-right: 0;
 }
 .portfolio-btn {
   display: inline-block;
   width: 260px;
   margin-right: 40px;
+  opacity: 0.2;
 }
 .portfolio-btn:last-child {
   margin-right: 0;
+}
+.portfolio-btn:hover {
+  opacity: 1;
 }
 .map{
   width: 1440px;
@@ -125,7 +251,7 @@ body {
   position: relative;
   height: 414px;
   width: 1440px;
-  background-image: url("img/map.jpeg");
+  background-image: image("198335-nerds/img/map.jpg");
 }
 .map-contacts {
   position: absolute;
@@ -157,5 +283,5 @@ h4 {
 }
 
 div, article, header, footer, section, a, p, span {
-outline: 1px solid red;
+outline: 1px solid blue;
 }
