--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@ body {
 }
 .main-header {
   background-color: #eeeeee;
+  padding-top: 20px;
 }
 .clearfix::after{
   content: "";
@@ -27,7 +28,9 @@ body {
 .home:hover {
   opacity: 0.8;
 }
-
+.home:active {
+  opacity: 0.3;
+}
 .main-navigation {
   display: inline;
   float: left;
@@ -41,7 +44,7 @@ body {
   font-weight: bold;
   color: #000000;
   margin-right: 50px;
-  margin-top: 20px;
+  margin-top: 30px;
   vertical-align: middle;
 }
 .main-navigation a last-child {
@@ -53,12 +56,15 @@ body {
 .main-navigation .active {
   border-bottom: 2px solid #fb565a;
 }
+.main-navigation a:active {
+  color: #bdbdbd;
+}
 
 .user-block {
   float: right;
   width: 160px;
   min-height: 24px;
-  margin-top: 20px;
+  margin-top: 30px;
   position: relative;
 }
 .user-block a {
@@ -70,60 +76,94 @@ body {
   left: 86px;
   position: absolute;
 }
-.basket-img {
+.user-block .basket-img {
   width: 15px;
   height: 15px;
-  background-image: image("198335-nerds/img/nav.png");
+  background-image: url("../img/nav.png");
   background-repeat: no-repeat;
   background-position: 0 0;
   opacity: 0.3;
   position: absolute;
   top: 4px;
-  left: 58px;
+  left: 45px;
 }
 .user-block a:hover {
   color: #fb565a;
 }
+.user-block a:active {
+  color: #bdbdbd;
+}
 
 .slider {
   width: 1160px;
+  min-height: 431px;
   margin: 0 auto;
 }
-.slider-img {
-  width: 760px;
-  position:relative;
-  left: 400px;
-}
-.slider-slogan {
-  width: 520px;
-  position: absolute;
-  z-index: 10;
+.slider-page {
+  position: relative;
 }
 .slogan-name{
   font-size: 55px;
-  font-weight: normal;
-  line-height: normal;
+  font-weight: bold;
+  line-height: 55px;
+  position: absolute;
+  width: 380px;
+  z-index: 15;
+  top: 70px;
 }
+.slogan-words {
+  position: absolute;
+  width: 380px;
+  top: 195px;
 
-.btn {
-  padding: 17px 50px;
+}
+.slider-img {
+  position: absolute;
+  top: 0px;
+  left: 400px;
+  width: 760px;
+  height: 431px;
+}
+.slide1 {
+    background-image: url("../img/slide1.png");
+}
+/*.slide2 {
+    background-image: url("../img/slide2.png");
+}
+.slide3 {
+    background-image: url("../img/slide3.png");
+}*/
+
+.btn{
+  position: absolute;
+  top: 295px;
+  display: inline-block;
+  padding: 12px 55px;
   background-color: #fb565a;
+  border-radius: 3%;
   color: #ffffff;
   text-decoration: none;
   font-size: 16px;
   text-transform: uppercase;
-  /*margin-top: 45px;*/
 }
 .btn:hover {
   background-color: #e74246;
   color: #f9d8d8;
 }
+.btn:active {
+  background-color: #d7373b;
+  color: #e48789;
+  box-shadow:inset 0 3px 0 0 #c13135;
+}
+
 
 .features-item {
-  margin-top: 80px;
-  margin-bottom: 60px;
+  position: relative;
+  margin-top: 75px;
+  margin-bottom: 0px;
   float: left;
   width: 300px;
+  min-height: 350px;
   margin-right: 100px;
 }
 .features-item:last-child {
@@ -131,58 +171,144 @@ body {
   width: 300px;
   margin-right: 60px;
 }
+
 .btn-item {
-  padding: 17px 50px;
-  background-color: #fb565a;
-  color: #ffffff;
+  position: absolute;
+  top: 295px;
+  padding: 15px 40px;
+  border-radius: 3%;
   text-decoration: none;
   font-size: 16px;
   text-transform: uppercase;
 }
-.btn-item:hover {
+.btn-red {
+  background-color: #fb565a;
+  color: #ffffff;
+}
+.btn-red:hover {
   background-color: #e74246;
   color: #f9d8d8;
 }
-.btn-item nth-child(2) {
-  background-color: #00ca74;
+.btn-red:active {
+  background-color: #d7373b;
+  color: #e48789;
+  box-shadow: inset 0 3px 0 0 #c13135;
 }
-.btn-item nth-child(2):hover {
+.btn-green{
+  background-color: #00ca74;
+  color: #ffffff;
+}
+.btn-green:hover {
   background-color: #00bc6c;
   color: #ffffff;
 }
-.btn-item nth-child(3) {
-  background-color: #efc84a;
+.btn-green:active {
+  background-color: #00aa62;
+  color: #74c69c;
+  box-shadow: inset 0 3px 0 0 #009958;
 }
-.btn-item nth-child(3):hover {
+.btn-yellow{
+  background-color: #efc84a;
+  color:#ffffff;
+}
+.btn-yellow:hover {
   background-color: #eab534;
   color: #f5deb3;
 }
-hr {
-  color: #eeeeee;
-  height: 2px;
+.btn-yellow:active {
+  background-color: #e5a722;
+  color: #edc47f;
+  box-shadow: inset 0 3px 0 0 #ce961f;
 }
+
+.border {
+  border: solid 2px #eeeeee;
+  margin-top: 80px;
+}
+
 .about-us {
   width: 1160px;
   margin: 0 auto;
-  margin-top: 80px;
+  padding-top: 20px;
+  border-top: solid 2px #eeeeee;
 }
 .about {
   float: left;
   width: 660px;
 }
+.about-word {
+  margin-top: 0px;
+}
+
 h2 {
+  padding-top: 5px;
   font-size: 45px;
-  line-height: normal;
-  font-weight: normal;
+  line-height: 45px;
+  font-weight: bold;
+}
+.design {
+  padding-top: 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+.d-list {
+  list-style: none;
+  position: relative;
+  line-height: 50px;
+}
+.design-list::before {
+  content: "—";
+  font-weight: bold;
+  color: #fb565a;
+  position: absolute;
+  left: 10px;
 }
 .about-img {
   float: right;
   width: 360px;
+  margin-top: 10px;
 }
+
+.love {
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  padding-top: 15px;
+  padding-left: 15px;
+}
+.plus {
+  display: inline-block;
+  width: 100px;
+  float: left;
+  margin-top: 15px;
+  margin-right: 20px;
+}
+.plus last-child {
+  margin-right: 0px;
+}
+.percent {
+  font-size: 45px;
+  line-height: 45px;
+  font-weight: bold;
+}
+.sup {
+  vertical-align: super;
+  font-size: 25px;
+}
+.percent-w {
+  font-size: 16px;
+  font-weight: normal;
+}
+
 .portfolio {
   width: 1160px;
   margin: 0 auto;
+  margin-top: 30px;
+  margin-bottom: 80px;
   font-size: 0;
+  border-top: solid 2px #eeeeee;
+  border-bottom: solid 2px #eeeeee;
 }
 .portfolio nth-child(4) {
   margin-right: 0;
@@ -190,32 +316,134 @@ h2 {
 .portfolio-btn {
   display: inline-block;
   width: 260px;
-  margin-right: 40px;
+  margin-right: 38px;
   opacity: 0.2;
+  border-right: solid 2px #eeeeee;
 }
 .portfolio-btn:last-child {
   margin-right: 0;
+  border-right: none;
 }
 .portfolio-btn:hover {
   opacity: 1;
 }
+.portfolio-btn:active {
+  opacity: 0.1;
+}
+
 .map{
-  width: 1440px;
   margin: 0 auto;
+  display: block;
+  position: relative;
+  height: 414px;
+  width: 1440px;
+  background-image: url("../img/map.jpg");
+  background-position: center;
+}
+.map-contacts {
+  width: 320px;
+  height: 310px;
+  background-color: #ffffff;
+  position: absolute;
+  left: 140px;
+  top: 55px;
+}
+.name {
+  margin: 0;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-weight: bold;
+  padding: 40px 50px 0px 50px;
+}
+.adress {
+  width: 220px;
+  margin: 0;
+  padding: 30px 50px 15px 50px;
+  color: #666666;
+}
+.map-contacts {
+  position: relative;
+}
+.map-contacts a {
+  display: inline-block;
+  margin-left: 50px;
+  margin-bottom: 35px;
+  text-decoration: none;
+  color: #666666;
+}
+.btn-map {
+  position: absolute;
+  top: 205px;
+  left: 0px;
+  display: inline-block;
+  padding: 12px 45px;
+  background-color: #fb565a;
+  color: #ffffff;
+  border-radius: 3%;
+  text-decoration: none;
+  font-size: 16px;
+  text-transform: uppercase;
+}
+.btn-map:hover {
+  background-color: #e74246;
+  color: #f9d8d8;
+}
+.btn-map:active {
+  background-color: #d7373b;
+  color: #e48789;
+  box-shadow:inset 0 3px 0 0 #c13135;
+}
+
+.map-marker {
+  background-image: url("../img/map-marker.png");
+  position: absolute;
+  z-index: 20;
+  left: 400px;
+}
+
+.footer-container {
+  position: relative;
 }
 .footer-social {
-  float: left;
-  width: 260px;
   margin-right: 140px;
+  width: 260px;
+  height: 80px;
+  margin-top: 70px;
+}
+.social-btn  {
+  position: absolute;
+  width: 80px;
+  height: 80px;
+  margin-right: 10px;
+  border-radius: 50%;
+  background-color: #e1e1e1;
+}
+.social-btn last-child {
+  margin-right: 0px;
 }
 .friends {
-  float: left;
+  position: absolute;
+  left: 265px;
+  top: 25px;
   width: 560px;
 }
+
+
 
 .caption {
   width: 760px;
   margin: 0 auto;
+  text-align: center;
+  font-size: 55px;
+  font-weight: bold;
+  padding-top: 85px;
+  padding-bottom: 125px;
+}
+h5 {
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 30px;
+  text-transform: uppercase;
 }
 .selection {
   display: block;
@@ -246,16 +474,7 @@ h2 {
   width: 460px;
   margin-left: 0;
 }
-.map {
-  display: block;
-  position: relative;
-  height: 414px;
-  width: 1440px;
-  background-image: image("198335-nerds/img/map.jpg");
-}
-.map-contacts {
-  position: absolute;
-}
+
 .footer-social {
   display: inline-block;
   float: left;
@@ -269,10 +488,11 @@ h2 {
 
 h3 {
   font-size: 24px;
-  line-height: 30px;
+  line-height: 24px;
   color:#000000;
   font-weight: bold;
   font-style: Roboto;
+  text-transform: uppercase;
 }
 h4 {
   font-size: 36px;
